--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Lesson8_part2</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="container">
+        <div class="car">
+          <img src="img/Car.png" alt="red car" class="pic1" />
+          <p><span>MARCH 24, 2021</span></p>
+          <h2>
+            <span>Fantastic Designs Of 2015 Concept Cars</span>
+          </h2>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </main>
+  </body>
 </html>
