--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
             <span>Fantastic Designs Of 2015 Concept Cars</span>
           </h2>
         </div>
-        <div></div>
-        <div></div>
+        <div class="girl">
+          <img src="img/Thumbnail2.png" alt="girl" class="pic2" />
+          <p>MARCH 24, 2021</p>
+          <h2>
+            How To Find Design Inspiration In The Simple Things Around You
+          </h2>
+        </div>
+        <div class="flower">
+          <img src="img/Thumbnail3.png" alt="girls" class="pic3" />
+          <p>MARCH 24, 2021</p>
+          <h2>The Only Guide To Choosing Website Photos You’ll Ever Need</h2>
+        </div>
         <div></div>
         <div></div>
       </div>
