--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Lesson8_part2</title>
   </head>
@@ -30,8 +34,16 @@
           <p>MARCH 24, 2021</p>
           <h2>The Only Guide To Choosing Website Photos You’ll Ever Need</h2>
         </div>
-        <div></div>
-        <div></div>
+        <div class="legs">
+          <img src="img/Thumbnail4.png" alt="legs" class="pic4" />
+          <p>MARCH 24, 2021</p>
+          <h2>Get 80% Off DSLR Photography Course Bundle</h2>
+        </div>
+        <div class="city">
+          <img src="img/Thumbnail5.png" alt="city" class="pic5" />
+          <p>MARCH 24, 2021</p>
+          <h2>Get 80% Off DSLR Photography Course Bundle</h2>
+        </div>
       </div>
     </main>
   </body>
