--- a/index.html
+++ b/index.html
@@ -28,21 +28,25 @@
           <h2>
             How To Find Design Inspiration In The Simple Things Around You
           </h2>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
         </div>
         <div class="flower">
           <img src="img/Thumbnail3.png" alt="girls" class="pic3" />
           <p>MARCH 24, 2021</p>
           <h2>The Only Guide To Choosing Website Photos You’ll Ever Need</h2>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
         </div>
         <div class="legs">
           <img src="img/Thumbnail4.png" alt="legs" class="pic4" />
           <p>MARCH 24, 2021</p>
           <h2>Get 80% Off DSLR Photography Course Bundle</h2>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
         </div>
         <div class="city">
           <img src="img/Thumbnail5.png" alt="city" class="pic5" />
           <p>MARCH 24, 2021</p>
           <h2>Get 80% Off DSLR Photography Course Bundle</h2>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
         </div>
       </div>
     </main>
