--- a/index.html
+++ b/index.html
@@ -9,46 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Lesson8_part2</title>
   </head>
-  <body>
-    <main>
-      <div class="container">
-        <div class="car">
-          <img src="img/Car.png" alt="red car" class="pic1" />
-          <p><span>MARCH 24, 2021</span></p>
-          <h2>
-            <span>Fantastic Designs Of 2015 Concept Cars</span>
-          </h2>
-        </div>
-        <div class="girl">
-          <img src="img/Thumbnail2.png" alt="girl" class="pic2" />
-          <p>MARCH 24, 2021</p>
-          <h2>
-            How To Find Design Inspiration In The Simple Things Around You
-          </h2>
-          <img src="img/Avatar.png" alt="avatar" class="avatar" />
-        </div>
-        <div class="flower">
-          <img src="img/Thumbnail3.png" alt="girls" class="pic3" />
-          <p>MARCH 24, 2021</p>
-          <h2>The Only Guide To Choosing Website Photos You’ll Ever Need</h2>
-          <img src="img/Avatar.png" alt="avatar" class="avatar" />
-        </div>
-        <div class="legs">
-          <img src="img/Thumbnail4.png" alt="legs" class="pic4" />
-          <p>MARCH 24, 2021</p>
-          <h2>Get 80% Off DSLR Photography Course Bundle</h2>
-          <img src="img/Avatar.png" alt="avatar" class="avatar" />
-        </div>
-        <div class="city">
-          <img src="img/Thumbnail5.png" alt="city" class="pic5" />
-          <p>MARCH 24, 2021</p>
-          <h2>Get 80% Off DSLR Photography Course Bundle</h2>
-          <img src="img/Avatar.png" alt="avatar" class="avatar" />
-        </div>
-      </div>
-    </main>
-  </body>
+  <body></body>
 </html>
