--- a/index.html
+++ b/index.html
@@ -5,13 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Lesson8_part2</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="row">
+        <div class="col-8">
+          <p>MARCH 24, 2021</p>
+          <h2>Fantastic Designs Of 2015 Concept Cars</h2>
+        </div>
+        <div class="col-4">
+          <div class="girl">
+            <img src="img/Thumbnail2.png" alt="girl" />
+            <p>MARCH 24, 2021</p>
+            <h3>
+              How To Find Design Inspiration In The Simple Things Around You
+            </h3>
+          </div>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
+        </div>
+        <div class="col-4">
+          <div class="flower">
+            <img src="img/Thumbnail3.png" alt="flower" />
+            <p>MARCH 24, 2021</p>
+            <h3>The Only Guide To Choosing Website Photos You’ll Ever Need</h3>
+          </div>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
+        </div>
+        <div class="col-4">
+          <div class="legs">
+            <img src="img/Thumbnail4.png" alt="legs" />
+            <p>MARCH 24, 2021</p>
+            <h3>Growth Hack Your Way to a Successful Freelance Career</h3>
+          </div>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
+        </div>
+        <div class="col-4">
+          <div class="city">
+            <img src="img/Thumbnail5.png" alt="city" />
+            <p>MARCH 24, 2021</p>
+            <h3>Get 80% Off DSLR Photography Course Bundle</h3>
+          </div>
+          <img src="img/Avatar.png" alt="avatar" class="avatar" />
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
