--- a/index.html
+++ b/index.html
@@ -16,55 +16,57 @@
   </head>
   <body>
     <main>
-      <div class="row">
+      <div class="row gy-4">
         <div class="col-8">
           <article class="card-big">
-            <p>MARCH 24, 2021</p>
-            <h2>Fantastic Designs Of 2015 Concept Cars</h2>
+            <div class="card-text">
+              <p>MARCH 24, 2021</p>
+              <h2>Fantastic Designs Of 2015 Concept Cars</h2>
+            </div>
           </article>
         </div>
         <div class="col-4">
           <article class="card">
-            <div class="girl">
-              <img src="img/Thumbnail2.png" alt="girl" />
+            <img src="img/Thumbnail2.png" alt="girl" />
+            <div class="card__content">
               <p>MARCH 24, 2021</p>
               <h3>
                 How To Find Design Inspiration In The Simple Things Around You
               </h3>
+              <img src="img/Avatar.png" alt="avatar" class="avatar" />
             </div>
-            <img src="img/Avatar.png" alt="avatar" class="avatar" />
           </article>
         </div>
         <div class="col-4">
           <article class="card">
-            <div class="flower">
-              <img src="img/Thumbnail3.png" alt="flower" />
+            <img src="img/Thumbnail3.png" alt="flower" />
+            <div class="card__content">
               <p>MARCH 24, 2021</p>
               <h3>
                 The Only Guide To Choosing Website Photos You’ll Ever Need
               </h3>
+              <img src="img/Avatar.png" alt="avatar" class="avatar" />
             </div>
-            <img src="img/Avatar.png" alt="avatar" class="avatar" />
           </article>
         </div>
         <div class="col-4">
           <article class="card">
-            <div class="legs">
-              <img src="img/Thumbnail4.png" alt="legs" />
+            <img src="img/Thumbnail4.png" alt="legs" />
+            <div class="card__content">
               <p>MARCH 24, 2021</p>
               <h3>Growth Hack Your Way to a Successful Freelance Career</h3>
+              <img src="img/Avatar.png" alt="avatar" class="avatar" />
             </div>
-            <img src="img/Avatar.png" alt="avatar" class="avatar" />
           </article>
         </div>
         <div class="col-4">
           <article class="card">
-            <div class="city">
-              <img src="img/Thumbnail5.png" alt="city" />
+            <img src="img/Thumbnail5.png" alt="city" />
+            <div class="card__content">
               <p>MARCH 24, 2021</p>
               <h3>Get 80% Off DSLR Photography Course Bundle</h3>
+              <img src="img/Avatar.png" alt="avatar" class="avatar" />
             </div>
-            <img src="img/Avatar.png" alt="avatar" class="avatar" />
           </article>
         </div>
       </div>
